# dag-assistant

./: .gitignore  README.md
airflow_crew/: README.md  pyproject.toml
airflow_crew/knowledge/user_context/: user_preference.txt
airflow_crew/src/airflow_crew/: crew.py  main.py
airflow_crew/src/airflow_crew/config/: agents.yaml  tasks.yaml
airflow_crew/src/airflow_crew/tools/: __init__.py  analysis_tools.py  cli_tools.py  code_tools.py  environment_tools.py  provider_tools.py
airflow_crew/src/airflow_crew/tools/support/: analyzers.py  docker_manager.py  provider_mappings.yaml  scoring.py
res/project_planning/: challenges.md  crew_design.md  crew_design_code.md  design.md  plan.md  prototype.py  tasks_pending.md  tools_code.md
