[project]
name = "airflow_crew"
version = "0.1.0"
description = "airflow-crew using crewAI"
authors = [{ name = "Abhishek Bhakat", email = "abhishek.bhakat@hotmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
airflow_crew = "airflow_crew.main:run"
run_crew = "airflow_crew.main:run"
train = "airflow_crew.main:train"
replay = "airflow_crew.main:replay"
test = "airflow_crew.main:test"

[project.optional-dependencies]
dev = [
    "hatch==1.12.0",
    "pre-commit==3.7.1",
    "ruff==0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
indent-width = 4
fix = true
preview = true

lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "C90",  # Complexity
    "C",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "T10",  # flake8-debugger
    "A",  # flake8-builtins
    "UP",  # pyupgrade
]

lint.ignore = [
    "C416",  # Unnecessary list comprehension - rewrite as a generator expression
    "C408"  # Unnecessary `dict` call - rewrite as a literal
]

lint.fixable = ["ALL"]
lint.unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
